--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Etch-a-Sketch Project</title>
 </head>
 <body>
-    <div class="container"></div>
+    <header>
+        <h1>Etch-a-Sketch</h1>
+        <button>Button</button>
+    </header>
+    <main>
+        <div class="sketch-box"></div>
+    </main>
     <script src="js.js"></script>
 </body>
 </html>
