grid working with button to change

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <header>
         <h1>Etch-a-Sketch</h1>
-        <button>Button</button>
     </header>
+
+    <nav>
+        <input class="btn" type="button" value="Change Grid" onclick="getInput()">
+    </nav>
+
     <main>
-        <div class="sketch-box"></div>
+        <div class="container"></div>
     </main>
     <script src="js.js"></script>
 </body>
